Update to JDK11 and update dependencies.